MDEV-5964 - main.mdev-504 unveils assertion failure in             TABLE_SHARE::visit_subgraph

tc_acquire_table() is not ready to update TABLE::in_use without mutex:
thr1: table= free_tables.pop_front(); // table->in_use is 0
thr2: tdc_remove_table();
thr2: find_deadlock(); // assert(table->in_use != 0)
thr1: table->in_use= thd;

Protect update of TABLE::in_use by LOCK_table_share.